	  local/sapphire.mk, local/sapphire-i586-mingw32msvc.mk,
	  local/saturn.juju.net.nz.mk,
	  local/saturn.juju.net.nz-i386-mingw32msvc.mk,
	  local/ucf-cf-ppc-macosx-2.mk, local/ucf-cf-ppc-linux-1.mk,
	  local/ucf-cf-ppc-macosx-1.mk, local/ucf-cf-sparc-linux-1.mk,
	  local/x86-linux1-i586-mingw32msvc.mk, local/x86-linux1.mk:
	  removed unneded locals
	* components/sdcc.mk: make _SDCCDIR local


2006-10-31 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: fixed build failure if $(ORIGDIR)/sdcc doesn't exist
	* sdcc-build-bootstrap.sh: checkout sdcc-build directory to
	  $(HOME)/build/sdcc/sdcc-build/orig/sdcc-build instead
	  $(HOME)/build/sdcc/sdcc-build/dl

2006-10-30 Borut Razem <borut.razem AT siol.net>

	* lib/bootstrap.mk: add readline5.dll to packages if cross compiling
	* lib/upload.mk: keep only the newest 7 files in changelog_heads

2006-10-23 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme.pl: corect doubled </HEAD>

2006-10-22 Borut Razem <borut.razem AT siol.net>

	* support/sdcc_theme_navbar.html: deleted
	* support/sdcc_theme.pl: don't use sdcc_theme_navbar.html, insert
	  favicon to the html docummentation
	* lib/doc-archive.mk: changed sdcc_theme.pl command line
	* components/sdcc-web.mk: added
	* Makefile: inluded components/sdcc-web.mk

2006-10-18 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: create .htaccess so that .html files
	  are PHP processed
	* support/sdcc_theme_navbar.html: include ../../left_menu.inc

2006-09-05 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-extra.mk: don't build sdcc-extra if cross compiling

2006-08-31 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux1-i586-mingw32msvc.mk, local/x86-linux2-i586-mingw32msvc.mk:
	  enabled ucsim cross compilation (removed --disable-ucsim)

2006-08-12 Borut Razem <borut.razem AT siol.net>

	* lib/src-archive.mk: use do-upload for snapshot and doc uploading
	  to sdcc WEB
	* lib/upload.mk: remove htdocs/* if rsync succeeded
