@@ -46,7 +46,7 @@ sdcc-targetos-install:
 # Copies files from the native host that couldn't be compiled.
 sdcc-fromhost-install:
 ifeq ($(CROSSCOMPILING), 1)
-	cd $(TOPDIR)/build/$(HOSTOS)/sdcc/usr/local/share/sdcc; cp -r * $(BUILDDIR)/sdcc
+	cd $(TOPDIR)/build/$(HOSTOS)/sdcc/share/sdcc; cp -r * $(BUILDDIR)$(PREFIX)
 endif
 
 # There are no docs in the snapshot
